--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-parallax": "^3.3.0"
   },
   "devDependencies": {
