--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-parallax": "^3.3.0"
+    "react-parallax": "^3.3.0",
+    "react-under-construction": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
