--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "next-videos": "^1.4.0",
