--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
     "framer-motion": "^4.1.17",
-    "next": "11.1.0",
+    "next": "^11.1.4",
     "next-videos": "^1.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
