--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.5"
@@ -18,6 +15,9 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
   }
 }
