--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^0.1.6",
+    "eslint-config-next": "^13.4.4",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.5"
@@ -18,7 +19,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
-    "next": "^13.1.1",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
