--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/socialLinks.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/socialLinks.js", "styles/index.js"],
   "exclude": ["node_modules"]
 }
