--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-next": "^13.4.4",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
+    "sharp": "^0.32.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
