--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "moduleResolution": "node",
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/socialLinks.js", "styles/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/socialLinks.js", "styles/index.tsx"],
   "exclude": ["node_modules"]
 }
